MDEV-25792 server hangs on early shutdown if InnoDB needs to purge indexed virtual columns

if the server isn't started and innodb initiated a shutdown process -
don't wait for the server to start, it won't